<resources>
    <string name="temperature_info_C">%1$d°C</string>
    <string name="temperature_info_F">%1$d°F</string>
    <string name="temperature_feels_like">Feels like %1$s</string>
    <string name="temperature_C">°C</string>
    <string name="temperature_F">°F</string>
    <string name="feels_like_info_C">feels like %1$d</string>
    <string name="feels_like_info_F">feels like %1$d</string>

    <string name="humidity_info">Humidity: %1$d%%</string>

    <string name="pressure_info_hPa">Pressure: %1$d hPa</string>
    <string name="pressure_info_mmHg">Pressure: %1$d mm Hg</string>
    <string name="pressure_hPa">hPa</string>
    <string name="pressure_mmHg">mm Hg</string>

    <string name="wind_info_ms">Wind: %1$d m/s</string>
    <string name="wind_info_kmh">Wind: %1$d km/h</string>
    <string name="wind_kmh">km/h</string>
    <string name="wind_ms">m/s</string>

    <string name="windDirection_Type_SV">Wind direction: Northeast</string>
    <string name="windDirection_Type_YUV">Wind direction: Southeast</string>
    <string name="windDirection_Type_YUZ">Wind direction: Southwest</string>
    <string name="windDirection_Type_SZ">Wind direction: Northwest</string>

    <string name="app_name">Weather</string>

    <string name="city_name_country">%1$s, %2$s</string>
    <string name="details">Detailed forecast>></string>
    <string name="today">Today</string>

    <string name="explanation">To get weather data, please grant access device to location</string>
    <string name="permission_denied">This feature is not available without location permissions.
        Open app settings?</string>
    <string name="location_provider_disable">Location provider disable. Open device settings?</string>
    <string name="location_manager_not_available">Location manager not available</string>
    <string name="error_getting_location">Error getting location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="settings">Settings</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="windSpeed">WindSpeed</string>
    <string name="apply">Apply</string>
    <string name="favorites">Favorites</string>
    <string name="currentLocation">Current location</string>
    <string name="favoritesLocations">Favorites locations</string>

    <string name="results_internet_connection_error_text">Check internet connection</string>
    <string name="results_parsing_error_text">Json parsing error</string>
    <string name="results_unexpected_error_text">Unexpected error happened</string>

    <string name="loading_error">Error loading data </string>

    <string-array name="temperature">
        <item>°C</item>
        <item>°F</item>
    </string-array>

    <string-array name="pressure">
        <item>mm Hg</item>
        <item>hPa</item>
    </string-array>

    <string-array name="windSpeed">
        <item>km/h</item>
        <item>m/s</item>
    </string-array>

</resources>